--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tiptap/starter-kit": "^2.0.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.8",
+    "export-to-csv": "^0.2.1",
     "firebase": "^9.18.0",
     "mantine-react-table": "^1.0.0-beta.8",
     "path": "^0.12.7",
